@@ -1,65 +1,53 @@
 package net.minecraft.server.level;
 
-import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.Lists;
-import com.mojang.datafixers.util.Either;
 import it.unimi.dsi.fastutil.longs.Long2ObjectLinkedOpenHashMap;
-import it.unimi.dsi.fastutil.longs.LongOpenHashSet;
-import it.unimi.dsi.fastutil.longs.LongSet;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 import javax.annotation.Nullable;
 import net.minecraft.world.level.ChunkPos;
 
-public class ChunkTaskPriorityQueue<T> {
+public class ChunkTaskPriorityQueue {
    public static final int PRIORITY_LEVEL_COUNT = ChunkLevel.MAX_LEVEL + 2;
-   private final List<Long2ObjectLinkedOpenHashMap<List<Optional<T>>>> taskQueue = IntStream.range(0, PRIORITY_LEVEL_COUNT)
+   private final List<Long2ObjectLinkedOpenHashMap<List<Runnable>>> queuesPerPriority = IntStream.range(0, PRIORITY_LEVEL_COUNT)
       .mapToObj(var0 -> new Long2ObjectLinkedOpenHashMap())
-      .collect(Collectors.toList());
-   private volatile int firstQueue = PRIORITY_LEVEL_COUNT;
+      .toList();
+   private volatile int topPriorityQueueIndex = PRIORITY_LEVEL_COUNT;
    private final String name;
-   private final LongSet acquired = new LongOpenHashSet();
-   private final int maxTasks;
 
-   public ChunkTaskPriorityQueue(String var1, int var2) {
+   public ChunkTaskPriorityQueue(String var1) {
       super();
       this.name = var1;
-      this.maxTasks = var2;
    }
 
    protected void resortChunkTasks(int var1, ChunkPos var2, int var3) {
       if (var1 < PRIORITY_LEVEL_COUNT) {
-         Long2ObjectLinkedOpenHashMap var4 = this.taskQueue.get(var1);
+         Long2ObjectLinkedOpenHashMap var4 = this.queuesPerPriority.get(var1);
          List var5 = (List)var4.remove(var2.toLong());
-         if (var1 == this.firstQueue) {
-            while (this.hasWork() && this.taskQueue.get(this.firstQueue).isEmpty()) {
-               this.firstQueue++;
+         if (var1 == this.topPriorityQueueIndex) {
+            while (this.hasWork() && this.queuesPerPriority.get(this.topPriorityQueueIndex).isEmpty()) {
+               this.topPriorityQueueIndex++;
             }
          }
 
          if (var5 != null && !var5.isEmpty()) {
-            ((List)this.taskQueue.get(var3).computeIfAbsent(var2.toLong(), var0 -> Lists.newArrayList())).addAll(var5);
-            this.firstQueue = Math.min(this.firstQueue, var3);
+            ((List)this.queuesPerPriority.get(var3).computeIfAbsent(var2.toLong(), var0 -> Lists.newArrayList())).addAll(var5);
+            this.topPriorityQueueIndex = Math.min(this.topPriorityQueueIndex, var3);
          }
       }
    }
 
-   protected void submit(Optional<T> var1, long var2, int var4) {
-      ((List)this.taskQueue.get(var4).computeIfAbsent(var2, var0 -> Lists.newArrayList())).add(var1);
-      this.firstQueue = Math.min(this.firstQueue, var4);
+   protected void submit(Runnable var1, long var2, int var4) {
+      ((List)this.queuesPerPriority.get(var4).computeIfAbsent(var2, var0 -> Lists.newArrayList())).add(var1);
+      this.topPriorityQueueIndex = Math.min(this.topPriorityQueueIndex, var4);
    }
 
    protected void release(long var1, boolean var3) {
-      for (Long2ObjectLinkedOpenHashMap var5 : this.taskQueue) {
+      for (Long2ObjectLinkedOpenHashMap var5 : this.queuesPerPriority) {
          List var6 = (List)var5.get(var1);
          if (var6 != null) {
             if (var3) {
                var6.clear();
-            } else {
-               var6.removeIf(var0 -> var0.isEmpty());
             }
 
             if (var6.isEmpty()) {
@@ -68,48 +56,48 @@ public class ChunkTaskPriorityQueue<T> {
          }
       }
 
-      while (this.hasWork() && this.taskQueue.get(this.firstQueue).isEmpty()) {
-         this.firstQueue++;
+      while (this.hasWork() && this.queuesPerPriority.get(this.topPriorityQueueIndex).isEmpty()) {
+         this.topPriorityQueueIndex++;
       }
-
-      this.acquired.remove(var1);
-   }
-
-   private Runnable acquire(long var1) {
-      return () -> this.acquired.add(var1);
    }
 
    @Nullable
-   public Stream<Either<T, Runnable>> pop() {
-      if (this.acquired.size() >= this.maxTasks) {
-         return null;
-      } else if (!this.hasWork()) {
+   public ChunkTaskPriorityQueue.TasksForChunk pop() {
+      if (!this.hasWork()) {
          return null;
       } else {
-         int var1 = this.firstQueue;
-         Long2ObjectLinkedOpenHashMap var2 = this.taskQueue.get(var1);
+         int var1 = this.topPriorityQueueIndex;
+         Long2ObjectLinkedOpenHashMap var2 = this.queuesPerPriority.get(var1);
          long var3 = var2.firstLongKey();
          List var5 = (List)var2.removeFirst();
 
-         while (this.hasWork() && this.taskQueue.get(this.firstQueue).isEmpty()) {
-            this.firstQueue++;
+         while (this.hasWork() && this.queuesPerPriority.get(this.topPriorityQueueIndex).isEmpty()) {
+            this.topPriorityQueueIndex++;
          }
 
-         return var5.stream().map(var3x -> var3x.map(Either::left).orElseGet(() -> Either.right(this.acquire(var3))));
+         return new ChunkTaskPriorityQueue.TasksForChunk(var3, var5);
       }
    }
 
    public boolean hasWork() {
-      return this.firstQueue < PRIORITY_LEVEL_COUNT;
+      return this.topPriorityQueueIndex < PRIORITY_LEVEL_COUNT;
    }
 
    @Override
    public String toString() {
-      return this.name + " " + this.firstQueue + "...";
+      return this.name + " " + this.topPriorityQueueIndex + "...";
    }
 
-   @VisibleForTesting
-   LongSet getAcquired() {
-      return new LongOpenHashSet(this.acquired);
-   }
+// $VF: Couldn't be decompiled
+// Please report this to the Vineflower issue tracker, at https://github.com/Vineflower/vineflower/issues with a copy of the class file (if you have the rights to distribute it!)
+// java.lang.NullPointerException
+//   at org.jetbrains.java.decompiler.main.InitializerProcessor.isExprentIndependent(InitializerProcessor.java:423)
+//   at org.jetbrains.java.decompiler.main.InitializerProcessor.extractDynamicInitializers(InitializerProcessor.java:335)
+//   at org.jetbrains.java.decompiler.main.InitializerProcessor.extractInitializers(InitializerProcessor.java:44)
+//   at org.jetbrains.java.decompiler.main.ClassWriter.invokeProcessors(ClassWriter.java:97)
+//   at org.jetbrains.java.decompiler.main.ClassWriter.writeClass(ClassWriter.java:348)
+//   at org.jetbrains.java.decompiler.main.ClassWriter.writeClass(ClassWriter.java:492)
+//   at org.jetbrains.java.decompiler.main.ClassesProcessor.writeClass(ClassesProcessor.java:474)
+//   at org.jetbrains.java.decompiler.main.Fernflower.getClassContent(Fernflower.java:191)
+//   at org.jetbrains.java.decompiler.struct.ContextUnit.lambda$save$3(ContextUnit.java:187)
 }
