@@ -11,9 +11,7 @@ import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.GlobalPos;
@@ -37,6 +35,8 @@ import net.minecraft.stats.Stats;
 import net.minecraft.tags.ItemTags;
 import net.minecraft.util.Mth;
 import net.minecraft.util.SpawnUtil;
+import net.minecraft.util.profiling.Profiler;
+import net.minecraft.util.profiling.ProfilerFiller;
 import net.minecraft.world.Difficulty;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.InteractionHand;
@@ -46,13 +46,14 @@ import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.AgeableMob;
+import net.minecraft.world.entity.ConversionParams;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntitySpawnReason;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.ExperienceOrb;
 import net.minecraft.world.entity.LightningBolt;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.Mob;
-import net.minecraft.world.entity.MobSpawnType;
 import net.minecraft.world.entity.ReputationEventHandler;
 import net.minecraft.world.entity.SpawnGroupData;
 import net.minecraft.world.entity.ai.Brain;
@@ -95,19 +96,9 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
    public static final int BREEDING_FOOD_THRESHOLD = 12;
    public static final Map<Item, Integer> FOOD_POINTS = ImmutableMap.of(Items.BREAD, 4, Items.POTATO, 1, Items.CARROT, 1, Items.BEETROOT, 1);
    private static final int TRADES_PER_LEVEL = 2;
-   private static final Set<Item> WANTED_ITEMS = ImmutableSet.of(
-      Items.BREAD,
-      Items.POTATO,
-      Items.CARROT,
-      Items.WHEAT,
-      Items.WHEAT_SEEDS,
-      Items.BEETROOT,
-      new Item[]{Items.BEETROOT_SEEDS, Items.TORCHFLOWER_SEEDS, Items.PITCHER_POD}
-   );
    private static final int MAX_GOSSIP_TOPICS = 10;
    private static final int GOSSIP_COOLDOWN = 1200;
    private static final int GOSSIP_DECAY_INTERVAL = 24000;
-   private static final int REPUTATION_CHANGE_PER_EVENT = 25;
    private static final int HOW_FAR_AWAY_TO_TALK_TO_OTHER_VILLAGERS_ABOUT_GOLEMS = 10;
    private static final int HOW_MANY_VILLAGERS_NEED_TO_AGREE_TO_SPAWN_A_GOLEM = 5;
    private static final long TIME_SINCE_SLEEPING_FOR_GOLEM_SPAWNING = 24000L;
@@ -191,6 +182,7 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
       super(var1, var2);
       ((GroundPathNavigation)this.getNavigation()).setCanOpenDoors(true);
       this.getNavigation().setCanFloat(true);
+      this.getNavigation().setRequiredPathLength(48.0F);
       this.setCanPickUpLoot(true);
       this.setVillagerData(this.getVillagerData().setType(var3).setProfession(VillagerProfession.NONE));
    }
@@ -256,7 +248,7 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
    }
 
    public static AttributeSupplier.Builder createAttributes() {
-      return Mob.createMobAttributes().add(Attributes.MOVEMENT_SPEED, 0.5).add(Attributes.FOLLOW_RANGE, 48.0);
+      return Mob.createMobAttributes().add(Attributes.MOVEMENT_SPEED, 0.5);
    }
 
    public boolean assignProfessionWhenSpawned() {
@@ -264,10 +256,11 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
    }
 
    @Override
-   protected void customServerAiStep() {
-      this.level().getProfiler().push("villagerBrain");
-      this.getBrain().tick((ServerLevel)this.level(), this);
-      this.level().getProfiler().pop();
+   protected void customServerAiStep(ServerLevel var1) {
+      ProfilerFiller var2 = Profiler.get();
+      var2.push("villagerBrain");
+      this.getBrain().tick(var1, this);
+      var2.pop();
       if (this.assignProfessionWhenSpawned) {
          this.assignProfessionWhenSpawned = false;
       }
@@ -284,16 +277,16 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
          }
       }
 
-      if (this.lastTradedPlayer != null && this.level() instanceof ServerLevel) {
-         ((ServerLevel)this.level()).onReputationEvent(ReputationEventType.TRADE, this.lastTradedPlayer, this);
-         this.level().broadcastEntityEvent(this, (byte)14);
+      if (this.lastTradedPlayer != null) {
+         var1.onReputationEvent(ReputationEventType.TRADE, this.lastTradedPlayer, this);
+         var1.broadcastEntityEvent(this, (byte)14);
          this.lastTradedPlayer = null;
       }
 
       if (!this.isNoAi() && this.random.nextInt(100) == 0) {
-         Raid var1 = ((ServerLevel)this.level()).getRaidAt(this.blockPosition());
-         if (var1 != null && var1.isActive() && !var1.isOver()) {
-            this.level().broadcastEntityEvent(this, (byte)42);
+         Raid var3 = var1.getRaidAt(this.blockPosition());
+         if (var3 != null && var3.isActive() && !var3.isOver()) {
+            var1.broadcastEntityEvent(this, (byte)42);
          }
       }
 
@@ -301,7 +294,7 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
          this.stopTrading();
       }
 
-      super.customServerAiStep();
+      super.customServerAiStep(var1);
    }
 
    @Override
@@ -321,7 +314,7 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
          return super.mobInteract(var1, var2);
       } else if (this.isBaby()) {
          this.setUnhappy();
-         return InteractionResult.sidedSuccess(this.level().isClientSide);
+         return InteractionResult.SUCCESS;
       } else {
          if (!this.level().isClientSide) {
             boolean var4 = this.getOffers().isEmpty();
@@ -340,7 +333,7 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
             this.startTrading(var1);
          }
 
-         return InteractionResult.sidedSuccess(this.level().isClientSide);
+         return InteractionResult.SUCCESS;
       }
    }
 
@@ -383,11 +376,6 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
    @Override
    public boolean canRestock() {
       return true;
-   }
-
-   @Override
-   public boolean isClientSide() {
-      return this.level().isClientSide;
    }
 
    public void restock() {
@@ -533,7 +521,6 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
 
       this.lastRestockGameTime = var1.getLong("LastRestock");
       this.lastGossipDecayTime = var1.getLong("LastGossipDecay");
-      this.setCanPickUpLoot(true);
       if (this.level() instanceof ServerLevel) {
          this.refreshBrain((ServerLevel)this.level());
       }
@@ -602,14 +589,6 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
       if (var1.shouldRewardExp()) {
          this.level().addFreshEntity(new ExperienceOrb(this.level(), this.getX(), this.getY() + 0.5, this.getZ(), var2));
       }
-   }
-
-   public void setChasing(boolean var1) {
-      this.chasing = var1;
-   }
-
-   public boolean isChasing() {
-      return this.chasing;
    }
 
    @Override
@@ -754,16 +733,19 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
 
    @Nullable
    @Override
-   public SpawnGroupData finalizeSpawn(ServerLevelAccessor var1, DifficultyInstance var2, MobSpawnType var3, @Nullable SpawnGroupData var4) {
-      if (var3 == MobSpawnType.BREEDING) {
+   public SpawnGroupData finalizeSpawn(ServerLevelAccessor var1, DifficultyInstance var2, EntitySpawnReason var3, @Nullable SpawnGroupData var4) {
+      if (var3 == EntitySpawnReason.BREEDING) {
          this.setVillagerData(this.getVillagerData().setProfession(VillagerProfession.NONE));
       }
 
-      if (var3 == MobSpawnType.COMMAND || var3 == MobSpawnType.SPAWN_EGG || MobSpawnType.isSpawner(var3) || var3 == MobSpawnType.DISPENSER) {
+      if (var3 == EntitySpawnReason.COMMAND
+         || var3 == EntitySpawnReason.SPAWN_ITEM_USE
+         || EntitySpawnReason.isSpawner(var3)
+         || var3 == EntitySpawnReason.DISPENSER) {
          this.setVillagerData(this.getVillagerData().setType(VillagerType.byBiome(var1.getBiome(this.blockPosition()))));
       }
 
-      if (var3 == MobSpawnType.STRUCTURE) {
+      if (var3 == EntitySpawnReason.STRUCTURE) {
          this.assignProfessionWhenSpawned = true;
       }
 
@@ -783,7 +765,7 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
       }
 
       Villager var6 = new Villager(EntityType.VILLAGER, var1, var3);
-      var6.finalizeSpawn(var1, var1.getCurrentDifficultyAt(var6.blockPosition()), MobSpawnType.BREEDING, null);
+      var6.finalizeSpawn(var1, var1.getCurrentDifficultyAt(var6.blockPosition()), EntitySpawnReason.BREEDING, null);
       return var6;
    }
 
@@ -791,21 +773,12 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
    public void thunderHit(ServerLevel var1, LightningBolt var2) {
       if (var1.getDifficulty() != Difficulty.PEACEFUL) {
          LOGGER.info("Villager {} was struck by lightning {}.", this, var2);
-         Witch var3 = EntityType.WITCH.create(var1);
-         if (var3 != null) {
-            var3.moveTo(this.getX(), this.getY(), this.getZ(), this.getYRot(), this.getXRot());
-            var3.finalizeSpawn(var1, var1.getCurrentDifficultyAt(var3.blockPosition()), MobSpawnType.CONVERSION, null);
-            var3.setNoAi(this.isNoAi());
-            if (this.hasCustomName()) {
-               var3.setCustomName(this.getCustomName());
-               var3.setCustomNameVisible(this.isCustomNameVisible());
-            }
-
-            var3.setPersistenceRequired();
-            var1.addFreshEntityWithPassengers(var3);
+         Witch var3 = this.convertTo(EntityType.WITCH, ConversionParams.single(this, false, false), var2x -> {
+            var2x.finalizeSpawn(var1, var1.getCurrentDifficultyAt(var2x.blockPosition()), EntitySpawnReason.CONVERSION, null);
+            var2x.setPersistenceRequired();
             this.releaseAllPois();
-            this.discard();
-         } else {
+         });
+         if (var3 == null) {
             super.thunderHit(var1, var2);
          }
       } else {
@@ -814,14 +787,15 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
    }
 
    @Override
-   protected void pickUpItem(ItemEntity var1) {
-      InventoryCarrier.pickUpItem(this, this, var1);
+   protected void pickUpItem(ServerLevel var1, ItemEntity var2) {
+      InventoryCarrier.pickUpItem(var1, this, this, var2);
    }
 
    @Override
-   public boolean wantsToPickUp(ItemStack var1) {
-      Item var2 = var1.getItem();
-      return (WANTED_ITEMS.contains(var2) || this.getVillagerData().getProfession().requestedItems().contains(var2)) && this.getInventory().canAddItem(var1);
+   public boolean wantsToPickUp(ServerLevel var1, ItemStack var2) {
+      Item var3 = var2.getItem();
+      return (var2.is(ItemTags.VILLAGER_PICKS_UP) || this.getVillagerData().getProfession().requestedItems().contains(var3))
+         && this.getInventory().canAddItem(var2);
    }
 
    public boolean hasExcessFood() {
@@ -884,10 +858,10 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
       if (this.wantsToSpawnGolem(var2)) {
          AABB var5 = this.getBoundingBox().inflate(10.0, 10.0, 10.0);
          List var6 = var1.getEntitiesOfClass(Villager.class, var5);
-         List var7 = var6.stream().filter(var2x -> var2x.wantsToSpawnGolem(var2)).limit(5L).collect(Collectors.toList());
+         List var7 = var6.stream().filter(var2x -> var2x.wantsToSpawnGolem(var2)).limit(5L).toList();
          if (var7.size() >= var4) {
             if (!SpawnUtil.trySpawnMob(
-                  EntityType.IRON_GOLEM, MobSpawnType.MOB_SUMMONED, var1, this.blockPosition(), 10, 8, 6, SpawnUtil.Strategy.LEGACY_IRON_GOLEM
+                  EntityType.IRON_GOLEM, EntitySpawnReason.MOB_SUMMONED, var1, this.blockPosition(), 10, 8, 6, SpawnUtil.Strategy.LEGACY_IRON_GOLEM
                )
                .isEmpty()) {
                var6.forEach(GolemSensor::golemDetected);
@@ -958,6 +932,6 @@ public class Villager extends AbstractVillager implements ReputationEventHandler
 
    private boolean golemSpawnConditionsMet(long var1) {
       Optional var3 = this.brain.getMemory(MemoryModuleType.LAST_SLEPT);
-      return var3.isPresent() ? var1 - (Long)var3.get() < 24000L : false;
+      return var3.filter(var2 -> var1 - var2 < 24000L).isPresent();
    }
 }
