@@ -2,18 +2,13 @@ package net.minecraft.world.level.biome;
 
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.mojang.logging.LogUtils;
-import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
-import java.util.Map.Entry;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import net.minecraft.Util;
@@ -21,7 +16,6 @@ import net.minecraft.core.Holder;
 import net.minecraft.core.HolderGetter;
 import net.minecraft.core.HolderSet;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.util.StringRepresentable;
 import net.minecraft.world.level.levelgen.GenerationStep;
 import net.minecraft.world.level.levelgen.carver.ConfiguredWorldCarver;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
@@ -31,16 +25,10 @@ import org.slf4j.Logger;
 
 public class BiomeGenerationSettings {
    private static final Logger LOGGER = LogUtils.getLogger();
-   public static final BiomeGenerationSettings EMPTY = new BiomeGenerationSettings(ImmutableMap.of(), ImmutableList.of());
+   public static final BiomeGenerationSettings EMPTY = new BiomeGenerationSettings(HolderSet.direct(), List.of());
    public static final MapCodec<BiomeGenerationSettings> CODEC = RecordCodecBuilder.mapCodec(
       var0 -> var0.group(
-               Codec.simpleMap(
-                     GenerationStep.Carving.CODEC,
-                     ConfiguredWorldCarver.LIST_CODEC.promotePartial(Util.prefix("Carver: ", LOGGER::error)),
-                     StringRepresentable.keys(GenerationStep.Carving.values())
-                  )
-                  .fieldOf("carvers")
-                  .forGetter(var0x -> var0x.carvers),
+               ConfiguredWorldCarver.LIST_CODEC.promotePartial(Util.prefix("Carver: ", LOGGER::error)).fieldOf("carvers").forGetter(var0x -> var0x.carvers),
                PlacedFeature.LIST_OF_LISTS_CODEC
                   .promotePartial(Util.prefix("Features: ", LOGGER::error))
                   .fieldOf("features")
@@ -48,12 +36,12 @@ public class BiomeGenerationSettings {
             )
             .apply(var0, BiomeGenerationSettings::new)
    );
-   private final Map<GenerationStep.Carving, HolderSet<ConfiguredWorldCarver<?>>> carvers;
+   private final HolderSet<ConfiguredWorldCarver<?>> carvers;
    private final List<HolderSet<PlacedFeature>> features;
    private final Supplier<List<ConfiguredFeature<?, ?>>> flowerFeatures;
    private final Supplier<Set<PlacedFeature>> featureSet;
 
-   BiomeGenerationSettings(Map<GenerationStep.Carving, HolderSet<ConfiguredWorldCarver<?>>> var1, List<HolderSet<PlacedFeature>> var2) {
+   BiomeGenerationSettings(HolderSet<ConfiguredWorldCarver<?>> var1, List<HolderSet<PlacedFeature>> var2) {
       super();
       this.carvers = var1;
       this.features = var2;
@@ -68,8 +56,8 @@ public class BiomeGenerationSettings {
       this.featureSet = Suppliers.memoize(() -> var2.stream().flatMap(HolderSet::stream).map(Holder::value).collect(Collectors.toSet()));
    }
 
-   public Iterable<Holder<ConfiguredWorldCarver<?>>> getCarvers(GenerationStep.Carving var1) {
-      return Objects.requireNonNullElseGet(this.carvers.get(var1), List::of);
+   public Iterable<Holder<ConfiguredWorldCarver<?>>> getCarvers() {
+      return this.carvers;
    }
 
    public List<ConfiguredFeature<?, ?>> getFlowerFeatures() {
@@ -99,15 +87,15 @@ public class BiomeGenerationSettings {
          return this;
       }
 
-      public BiomeGenerationSettings.Builder addCarver(GenerationStep.Carving var1, ResourceKey<ConfiguredWorldCarver<?>> var2) {
-         this.addCarver(var1, this.worldCarvers.getOrThrow(var2));
+      public BiomeGenerationSettings.Builder addCarver(ResourceKey<ConfiguredWorldCarver<?>> var1) {
+         this.addCarver(this.worldCarvers.getOrThrow(var1));
          return this;
       }
    }
 
    public static class PlainBuilder {
-      private final Map<GenerationStep.Carving, List<Holder<ConfiguredWorldCarver<?>>>> carvers = Maps.newLinkedHashMap();
-      private final List<List<Holder<PlacedFeature>>> features = Lists.newArrayList();
+      private final List<Holder<ConfiguredWorldCarver<?>>> carvers = new ArrayList<>();
+      private final List<List<Holder<PlacedFeature>>> features = new ArrayList<>();
 
       public PlainBuilder() {
          super();
@@ -123,8 +111,8 @@ public class BiomeGenerationSettings {
          return this;
       }
 
-      public BiomeGenerationSettings.PlainBuilder addCarver(GenerationStep.Carving var1, Holder<ConfiguredWorldCarver<?>> var2) {
-         this.carvers.computeIfAbsent(var1, var0 -> Lists.newArrayList()).add(var2);
+      public BiomeGenerationSettings.PlainBuilder addCarver(Holder<ConfiguredWorldCarver<?>> var1) {
+         this.carvers.add(var1);
          return this;
       }
 
@@ -136,8 +124,7 @@ public class BiomeGenerationSettings {
 
       public BiomeGenerationSettings build() {
          return new BiomeGenerationSettings(
-            this.carvers.entrySet().stream().collect(ImmutableMap.toImmutableMap(Entry::getKey, var0 -> HolderSet.direct((List)var0.getValue()))),
-            this.features.stream().map(HolderSet::direct).collect(ImmutableList.toImmutableList())
+            HolderSet.direct(this.carvers), this.features.stream().map(HolderSet::direct).collect(ImmutableList.toImmutableList())
          );
       }
    }
